Apply refaster patch